# HiFi-KPI

./: .gitignore  GranularitySelection.py  Test_set_model.py  main.py  pyproject.toml  requirements.txt
Training/: HPC_TC.py  train_model.py
pre_process/: data_cleaning.py  scraped_to_ready.ipynb
src/: metrics.py
src/Modelling/: model.py
src/Modelling/Text_classifier/: bert_based_embeddings.py  convert_to_depth.py  model.py  report.py  top_down_paths.py
src/Preprocessing/: misc.py  no_BIO.py
