[project]
name = "reproduction-hifi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "en-core-web-sm",
    "evaluate>=0.4.6",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.3",
    "seqeval>=1.2.2",
    "spacy>=3.8.11",
    "torch>=2.10.0",
    "transformers>=5.2.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
